# rust-btorrent

./: Cargo.toml  temp_metadata.torrent
src/: file_ops.rs  main.rs  mod.rs  peer.rs  torrent_parser.rs  tracker.rs
src/torrent/: torrent_parser.rs  tracker.rs
