[package]
name = "rust-torrent"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
hex = "0.4.3"
reqwest = {version = "0.12.15", features = ["blocking", "json"]}
rfd = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.17"
sha1 = "0.10.6"
tokio = { version = "1.44.0", features = ["full"] }
url = "2.5.4"
urlencoding = "2.1.3"
value = "0.1.1"
bendy = "0.3"